--- a/index.html
+++ b/index.html
@@ -27,128 +27,134 @@
     <title>Frontend Mentor | Social proof section</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
+
   <body>
     <main>
-      <header>
-        <h1>10,000+ of our users love our products.</h1>
-        <p>
-          We only provide great products combined with excellent customer
-          service. See what our satisfied customers are saying about our
-          services.
-        </p>
-      </header>
+      <section class="container">
+        <header>
+          <h1>10,000+ of our users love our products.</h1>
+          <p>
+            We only provide great products combined with excellent customer
+            service. See what our satisfied customers are saying about our
+            services.
+          </p>
+        </header>
 
-      <!-- Star Rating Section -->
-      <section class="star-ratings">
-        <div class="rating">
-          <div class="stars">
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-          </div>
-          <h2>Rated 5 Stars in Reviews</h2>
-        </div>
-
-        <div class="rating">
-          <div class="stars">
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-          </div>
-          <h2>Rated 5 Stars in Report Guru</h2>
-        </div>
-
-        <div class="rating">
-          <div class="stars">
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-            <img src="/images/icon-star.svg" alt="star icon" class="star" />
-          </div>
-          <h2>Rated 5 Stars in BestTech</h2>
-        </div>
-      </section>
-
-      <!-- Testimonial Section -->
-      <section class="testimonials">
-        <!-- Testiomnial 1 -->
-        <div class="testimonial">
-          <div class="testimonial-header">
-            <img
-              src="/images/image-colton.jpg"
-              alt="image of verified buyer - Colton"
-              class="img-buyer"
-            />
-            <h3>
-              Colton Smith<br />
-              <span> Verified Buyer </span>
-            </h3>
+        <!-- Star Rating Section -->
+        <section class="star-ratings">
+          <div class="rating">
+            <div class="stars">
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+            </div>
+            <h2>Rated 5 Stars in Reviews</h2>
           </div>
 
-          <blockquote>
-            "We needed the same printed design as the one we had ordered a week
-            prior. Not only did they find the original order, but we also
-            received it in time. Excellent!"
-          </blockquote>
-        </div>
-
-        <!-- Testimonial 2 -->
-        <div class="testimonial">
-          <div class="testimonial-header">
-            <img
-              src="/images/image-irene.jpg"
-              alt="image of verified buyer - Irene"
-              class="img-buyer"
-            />
-            <h3>
-              Irene Roberts <br />
-              <span> Verified Buyer </span>
-            </h3>
+          <div class="rating">
+            <div class="stars">
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+            </div>
+            <h2>Rated 5 Stars in Report Guru</h2>
           </div>
 
-          <blockquote>
-            "Customer service is always excellent and very quick turn around.
-            Completely delighted with the simplicity of the purchase and the
-            speed of delivery."
-          </blockquote>
-        </div>
+          <div class="rating">
+            <div class="stars">
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+              <img src="/images/icon-star.svg" alt="star icon" class="star" />
+            </div>
+            <h2>Rated 5 Stars in BestTech</h2>
+          </div>
+        </section>
 
-        <!-- Testimonial 3 -->
-        <div class="testimonial">
-          <div class="testimonial-header">
-            <img
-              src="/images/image-anne.jpg"
-              alt="image of verified buyer - Anne"
-              class="img-buyer"
-            />
+        <!-- Testimonial Section -->
+        <section class="testimonials">
+          <!-- Testiomnial 1 -->
+          <div class="testimonial">
+            <div class="testimonial-padding">
+              <div class="testimonial-header">
+                <img
+                  src="/images/image-colton.jpg"
+                  alt="image of verified buyer - Colton"
+                  width="40"
+                  height="40"
+                  class="img-buyer"
+                />
+                <h3>
+                  Colton Smith<br />
+                  <span> Verified Buyer </span>
+                </h3>
+              </div>
 
-            <h3>
-              Anne Wallace
-              <span> Verified Buyer </span>
-            </h3>
+              <blockquote>
+                "We needed the same printed design as the one we had ordered a
+                week prior. Not only did they find the original order, but we
+                also received it in time. Excellent!"
+              </blockquote>
+            </div>
           </div>
 
-          <blockquote>
-            "Put an order with this company and can only praise them for the
-            very high standard. Will definitely use them again and recommend
-            them to everyone!"
-          </blockquote>
-        </div>
+          <!-- Testimonial 2 -->
+          <div class="testimonial">
+            <div class="testimonial-padding">
+              <div class="testimonial-header">
+                <img
+                  src="/images/image-irene.jpg"
+                  alt="image of verified buyer - Irene"
+                  width="40"
+                  height="40"
+                  class="img-buyer"
+                />
+                <h3>
+                  Irene Roberts <br />
+                  <span> Verified Buyer </span>
+                </h3>
+              </div>
+
+              <blockquote>
+                "Customer service is always excellent and very quick turn
+                around. Completely delighted with the simplicity of the purchase
+                and the speed of delivery."
+              </blockquote>
+            </div>
+          </div>
+
+          <!-- Testimonial 3 -->
+          <div class="testimonial">
+            <div class="testimonial-padding">
+              <div class="testimonial-header">
+                <img
+                  src="/images/image-anne.jpg"
+                  alt="image of verified buyer - Anne"
+                  width="40"
+                  height="40"
+                  class="img-buyer"
+                />
+
+                <h3>
+                  Anne Wallace <br />
+                  <span> Verified Buyer </span>
+                </h3>
+              </div>
+
+              <blockquote>
+                "Put an order with this company and can only praise them for the
+                very high standard. Will definitely use them again and recommend
+                them to everyone!"
+              </blockquote>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
 
